# BtcDet

./: .gitignore  Makefile  README.md  pyproject.toml
btcdet/datasets/: multifindbestfit.py
btcdet/datasets/augmentor/: multi_best_match_querier.py
btcdet/datasets/kitti/: kitti_dataset.py
btcdet/models/detectors/: detector3d_template.py
btcdet/models/occ_pnt/occ_training_targets/: occ_targets_3d.py
btcdet/ops/iou3d_nms/: iou3d_nms_utils.py
btcdet/ops/roiaware_pool3d/: roiaware_pool3d_utils.py
btcdet/utils/: common_utils.py  coords_utils.py
tools/: train.py
tools/eval_utils/: eval_utils.py
tools/scripts/: dist_train.sh
